# libenclaveapp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  INTERFACE_DESIGN.md  MIRI.md  NEW_DEFECTS.md  README.md  REPORT.md  SECURITY.md  THREAT_MODEL.md  fix-macos.md
.github/workflows/: ci.yml  (+3 more)
crates/enclave/: Cargo.toml  DELIVERY_TIERS.md  README.md  THREAT_MODEL.md
crates/enclave/examples/: encryption.rs  integrity.rs  memory_protection.rs  signing.rs
crates/enclave/src/: auth.rs  capabilities.rs  config.rs  credential.rs  encryption.rs  error.rs  factory.rs  integrity.rs  lib.rs  security_key.rs  signing.rs  types.rs
crates/enclave/src/memory/: locked_buffer.rs  memory_enclave.rs  mod.rs  pool.rs  secure_buffer.rs  slab.rs
crates/enclaveapp-app-adapter/: Cargo.toml
crates/enclaveapp-app-adapter/src/: app_spec.rs  binding_store.rs  common.rs  credential_cache.rs  error.rs  execution_plan.rs  launcher.rs  lib.rs  prepare_launch.rs  provenance.rs  resolver.rs  secret_store.rs  state_lock.rs  temp_config.rs  types.rs
crates/enclaveapp-app-adapter/tests/: integration.rs
crates/enclaveapp-app-storage/: Cargo.toml
crates/enclaveapp-app-storage/src/: backend_marker.rs  encryption.rs  error.rs  lib.rs  mock.rs  platform.rs  signing.rs
crates/enclaveapp-apple/: Cargo.toml  README.md  build.rs
crates/enclaveapp-apple/src/: encrypt.rs  ffi.rs  keychain.rs  keychain_wrap.rs  lacontext.rs  lib.rs  meta_hmac.rs  meta_migration_marker.rs  meta_tag.rs  sign.rs
crates/enclaveapp-apple/swift/: bridge.swift
crates/enclaveapp-bridge/: Cargo.toml  README.md
crates/enclaveapp-bridge/src/: client.rs  lib.rs  protocol.rs
crates/enclaveapp-build-support/: Cargo.toml
crates/enclaveapp-build-support/src/: lib.rs
crates/enclaveapp-cache/: Cargo.toml
crates/enclaveapp-cache/src/: envelope.rs  lib.rs
crates/enclaveapp-core/: Cargo.toml  README.md
crates/enclaveapp-core/src/: bin_discovery.rs  config.rs  config_block.rs  daemon.rs  error.rs  lib.rs  metadata.rs  platform.rs  process.rs  quoting.rs  timeout.rs  traits.rs  types.rs
crates/enclaveapp-keyring/: Cargo.toml
crates/enclaveapp-keyring/src/: encrypt.rs  key_storage.rs  lib.rs  meta_tag.rs  sign.rs
crates/enclaveapp-linux-tpm/: Cargo.toml
crates/enclaveapp-linux-tpm/src/: encrypt.rs  lib.rs  sign.rs  tpm.rs
crates/enclaveapp-software/: Cargo.toml
crates/enclaveapp-software/src/: encrypt.rs  key_storage.rs  lib.rs  sign.rs
crates/enclaveapp-test-support/: Cargo.toml  README.md
crates/enclaveapp-test-support/src/: lib.rs  mock.rs
crates/enclaveapp-tpm-bridge/: Cargo.toml
crates/enclaveapp-tpm-bridge/src/: lib.rs  tpm.rs
crates/enclaveapp-windows/: Cargo.toml  README.md
crates/enclaveapp-windows-vbs/: Cargo.toml
crates/enclaveapp-windows-vbs/examples/: probe.rs
crates/enclaveapp-windows-vbs/src/: lib.rs  stub.rs  windows_impl.rs
crates/enclaveapp-windows-webauthn/: Cargo.toml
crates/enclaveapp-windows-webauthn/src/: lib.rs  stub.rs  windows_impl.rs
crates/enclaveapp-windows-webauthn/tests/: hardware_smoke.rs
crates/enclaveapp-windows/src/: convert.rs  dpapi_encrypt.rs  dpapi_fallback.rs  encrypt.rs  export.rs  hello.rs  hello_gate.rs  key.rs  lib.rs  password_gate.rs  provider.rs  sign.rs  state.rs  ui_policy.rs
crates/hardware-enclave/: Cargo.toml  DELIVERY_TIERS.md  README.md  THREAT_MODEL.md  build.rs
crates/hardware-enclave/examples/: encryption.rs  integrity.rs  memory_protection.rs  signing.rs
crates/hardware-enclave/src/: auth.rs  bridge_server.rs  capabilities.rs  config.rs  credential.rs  diagnostics.rs  encryption.rs  error.rs  exec.rs  factory.rs  fs.rs  hardening.rs  integrity.rs  lib.rs  process.rs  security_key.rs  shell.rs  signing.rs  types.rs  wsl.rs
crates/hardware-enclave/src/internal/: mod.rs
crates/hardware-enclave/src/internal/app_adapter/: app_spec.rs  binding_store.rs  common.rs  credential_cache.rs  error.rs  execution_plan.rs  launcher.rs  mod.rs  prepare_launch.rs  provenance.rs  resolver.rs  secret_store.rs  state_lock.rs  temp_config.rs  types.rs
crates/hardware-enclave/src/internal/app_storage/: backend_marker.rs  encryption.rs  error.rs  mock.rs  mod.rs  platform.rs  signing.rs
crates/hardware-enclave/src/internal/apple/: encrypt.rs  ffi.rs  keychain.rs  keychain_wrap.rs  lacontext.rs  meta_hmac.rs  meta_migration_marker.rs  meta_tag.rs  mod.rs  sign.rs  signing.rs
crates/hardware-enclave/src/internal/bridge/: client.rs  mod.rs  protocol.rs
crates/hardware-enclave/src/internal/build_support/: mod.rs
crates/hardware-enclave/src/internal/cache/: envelope.rs  mod.rs
crates/hardware-enclave/src/internal/core/: bin_discovery.rs  config.rs  config_block.rs  daemon.rs  error.rs  metadata.rs  mod.rs  platform.rs  process.rs  quoting.rs  signing.rs  timeout.rs  traits.rs  types.rs
crates/hardware-enclave/src/internal/keyring/: encrypt.rs  key_storage.rs  meta_migration_marker.rs  meta_tag.rs  mod.rs  sign.rs
crates/hardware-enclave/src/internal/linux_tpm/: encrypt.rs  mod.rs  sign.rs  tpm.rs
crates/hardware-enclave/src/internal/tpm_bridge/: mod.rs  tpm.rs
crates/hardware-enclave/src/internal/windows/: convert.rs  dpapi.rs  dpapi_encrypt.rs  dpapi_fallback.rs  encrypt.rs  export.rs  foreground_window.rs  hello_gate.rs  key.rs  meta_hmac.rs  meta_migration_marker.rs  meta_tag.rs  mod.rs  password_gate.rs  provider.rs  sign.rs  state.rs  ui_policy.rs
crates/hardware-enclave/src/internal/windows_webauthn/: mod.rs  stub.rs  windows_impl.rs
crates/hardware-enclave/src/internal/wsl/: detect.rs  install.rs  mod.rs  shell_config.rs  shell_init.rs
crates/hardware-enclave/src/memory/: memcall.rs  memory_enclave.rs  pool.rs  secure_buffer.rs
crates/hardware-enclave/tests/: examples_ci.rs
docs/: LINUX_SETUP.md  WINDOWS_TEST_MATRIX.md  design-app-adapter-promotion.md  design-cross-platform-meta-hmac.md  design-enclaveapp-app-storage.md  design-meta-hmac-trust-anchor.md  macos-app-bundle-distribution.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: der_to_p1363.rs  eccpublic_blob.rs
tests/: Test-EnclaveApps.ps1  test-enclave-apps.sh
(+16 files in other folders)
