[workspace]
members = [
    "crates/enclaveapp-core",
    "crates/enclaveapp-apple",
    "crates/enclaveapp-windows",
    "crates/enclaveapp-linux-tpm",
    "crates/enclaveapp-wsl",
    "crates/enclaveapp-bridge",
    "crates/enclaveapp-test-software",
    "crates/enclaveapp-keyring",
    "crates/enclaveapp-test-support",
    "crates/enclaveapp-app-storage",
    "crates/enclaveapp-app-adapter",
    "crates/enclaveapp-cache",
    "crates/enclaveapp-tpm-bridge",
    "crates/enclaveapp-build-support",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/godaddy/libenclaveapp"

[workspace.dependencies]
# Internal crates
enclaveapp-core = { path = "crates/enclaveapp-core" }
enclaveapp-apple = { path = "crates/enclaveapp-apple" }
enclaveapp-windows = { path = "crates/enclaveapp-windows" }
enclaveapp-wsl = { path = "crates/enclaveapp-wsl" }
enclaveapp-bridge = { path = "crates/enclaveapp-bridge" }
enclaveapp-test-software = { path = "crates/enclaveapp-test-software" }
enclaveapp-keyring = { path = "crates/enclaveapp-keyring" }
enclaveapp-linux-tpm = { path = "crates/enclaveapp-linux-tpm" }
enclaveapp-test-support = { path = "crates/enclaveapp-test-support" }
enclaveapp-app-storage = { path = "crates/enclaveapp-app-storage" }
enclaveapp-app-adapter = { path = "crates/enclaveapp-app-adapter" }
enclaveapp-cache = { path = "crates/enclaveapp-cache" }
enclaveapp-tpm-bridge = { path = "crates/enclaveapp-tpm-bridge" }
enclaveapp-build-support = { path = "crates/enclaveapp-build-support" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
dirs = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Encoding
base64 = "0.22"

# Crypto
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
aes-gcm = "0.10"
elliptic-curve = { version = "0.13", features = ["sec1"] }

# Windows
windows = { version = "0.58", features = ["Win32_Security", "Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Threading", "Win32_System_SystemServices", "Security_Credentials_UI", "Foundation"] }

# Linux TPM
tss-esapi = "7"

# System
libc = "0.2"
fs2 = "0.4"
fs4 = "0.9"
tempfile = "3"
shlex = "1"

# Keyring
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }

# Security
zeroize = { version = "1", features = ["zeroize_derive"] }

# Testing
rand = "0.9"

# Build support
winresource = "0.1"

[workspace.lints.rust]
unsafe_code = "deny"
future_incompatible = { level = "deny", priority = -1 }
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
explicit_outlives_requirements = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_debug_implementations = "warn"
noop_method_call = "warn"
non_ascii_idents = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_attr_outside_unsafe = "warn"
unused = { level = "warn", priority = -1 }
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_macro_rules = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
default_union_representation = "deny"
exit = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
mut_mut = "deny"
ptr_as_ptr = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
wildcard_dependencies = "deny"
dbg_macro = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
match_same_arms = "warn"
no_effect_underscore_binding = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
same_name_method = "warn"
single_char_lifetime_names = "warn"
implicit_clone = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
used_underscore_binding = "warn"
