[workspace]
members = [
    "crates/hardware-enclave",
    # Support crates still used via path deps by consuming repos:
    #   enclaveapp-core, enclaveapp-test-software — sshenc force-software feature
    #   enclaveapp-tpm-bridge — sshenc-tpm-bridge binary
    #   enclaveapp-bridge, enclaveapp-windows, enclaveapp-windows-webauthn — tpm-bridge deps
    #   enclaveapp-test-support — hardware-enclave dev tests
    "crates/enclaveapp-core",
    "crates/enclaveapp-test-software",
    "crates/enclaveapp-test-support",
    "crates/enclaveapp-tpm-bridge",
    "crates/enclaveapp-bridge",
    "crates/enclaveapp-windows",
    "crates/enclaveapp-windows-webauthn",
]
# Pure implementation crates whose code now lives inside hardware-enclave/src/internal/.
# Kept in the repository for reference but excluded from the workspace.
exclude = [
    "crates/enclaveapp-apple",
    "crates/enclaveapp-linux-tpm",
    "crates/enclaveapp-wsl",
    "crates/enclaveapp-keyring",
    "crates/enclaveapp-app-storage",
    "crates/enclaveapp-app-adapter",
    "crates/enclaveapp-cache",
    "crates/enclaveapp-build-support",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/godaddy/hardware-enclave"

[workspace.dependencies]
# Internal crates
hardware-enclave = { path = "crates/hardware-enclave" }
# Legacy source dirs kept for path-dep consumers (sshenc force-software feature).
# Not workspace members — just available as path deps via workspace.dependencies
# so their own Cargo.toml files (which use workspace = true internally) continue
# to parse correctly when referenced via path deps from consuming repos.
enclaveapp-core = { path = "crates/enclaveapp-core" }
enclaveapp-bridge = { path = "crates/enclaveapp-bridge" }
enclaveapp-windows = { path = "crates/enclaveapp-windows" }
enclaveapp-windows-webauthn = { path = "crates/enclaveapp-windows-webauthn" }
# default-features = false so that workspace members can opt out of the
# `linux-tpm` (libtss2) backend by not enabling it; members that want it
# forward `enclaveapp-app-storage/linux-tpm` via their own `linux-tpm`
# feature. (Cargo ignores a member's `default-features = false` on a
# `workspace = true` dep unless the workspace entry sets it here.)

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
dirs = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Encoding
base64 = "0.22"
ciborium = "0.2"

# Crypto
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
aes-gcm = { version = "0.10", features = ["zeroize"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }

# Windows
windows = { version = "0.58", features = ["Win32_Security", "Win32_Security_Credentials", "Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Threading", "Win32_System_SystemServices", "Win32_System_Memory", "Win32_System_Registry", "Win32_System_Com", "Win32_Graphics_Gdi", "Foundation", "Security_Credentials_UI", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_System_SystemInformation", "Win32_Networking_WindowsWebServices"] }

# Linux TPM
tss-esapi = "7"

# System
libc = "0.2"
fs2 = "0.4"
fs4 = "0.9"
tempfile = "3"
shlex = "1"

# Keyring
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }

# Security
zeroize = { version = "1", features = ["zeroize_derive"] }
subtle = "2"

# Testing
rand = "0.9"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# Build support
winresource = "0.1"

[workspace.lints.rust]
unsafe_code = "deny"
future_incompatible = { level = "deny", priority = -1 }
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
explicit_outlives_requirements = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_debug_implementations = "warn"
noop_method_call = "warn"
non_ascii_idents = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_attr_outside_unsafe = "warn"
unused = { level = "warn", priority = -1 }
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_macro_rules = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
default_union_representation = "deny"
exit = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
mut_mut = "deny"
ptr_as_ptr = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
wildcard_dependencies = "deny"
dbg_macro = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
match_same_arms = "warn"
no_effect_underscore_binding = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
same_name_method = "warn"
single_char_lifetime_names = "warn"
implicit_clone = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
used_underscore_binding = "warn"
