[package]
name = "enclaveapp-app-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Reusable wrapper substrate for adapting applications to secure secret delivery"

# `linux-tpm` forwards to enclaveapp-app-storage's feature of the same
# name (on by default). Consumers that never use the Linux hardware-TPM
# backend set `default-features = false` to drop the `libtss2`/tss-esapi
# link. `default-features = false` on the storage dep below lets that
# choice cascade.
[features]
default = ["linux-tpm"]
linux-tpm = ["enclaveapp-app-storage/linux-tpm"]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
enclaveapp-app-storage = { workspace = true, default-features = false }
enclaveapp-core = { workspace = true }
fs4 = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
zeroize = { workspace = true }

[dev-dependencies]
enclaveapp-app-storage = { workspace = true, features = ["mock"] }
tempfile = { workspace = true }

[lints]
workspace = true
