[package]
name = "enclaveapp-app-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "High-level application storage for hardware-backed key management"

[lints]
workspace = true

[features]
default = []

[dependencies]
enclaveapp-core = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"

# Mock backend — always compiled so `ENCLAVEAPP_MOCK_STORAGE=1` can
# swap it in at runtime without any feature flag gymnastics.
aes-gcm = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
enclaveapp-test-support = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
enclaveapp-apple = { workspace = true, features = ["signing", "encryption"] }

[target.'cfg(target_os = "windows")'.dependencies]
enclaveapp-windows = { workspace = true, features = ["signing", "encryption"] }

[target.'cfg(target_os = "linux")'.dependencies]
enclaveapp-keyring = { workspace = true, features = ["signing", "encryption"] }
enclaveapp-bridge = { workspace = true }
enclaveapp-wsl = { workspace = true }
enclaveapp-linux-tpm = { workspace = true, features = ["signing", "encryption"] }
