[package]
name = "enclaveapp-app-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "High-level application storage for hardware-backed key management"

[lints]
workspace = true

[features]
# `linux-tpm` is on by default to preserve existing behavior for
# consumers that want the Linux hardware-TPM backend. It pulls in
# `tss-esapi`, which links `libtss2` as a hard runtime (`DT_NEEDED`)
# dependency — so a binary that does not need it (e.g. one that only
# ever uses the keyring backend or the WSL→Windows bridge) should
# disable default features to avoid requiring `libtss2` to be installed
# just to start. Disabling it does not affect the keyring backend, which
# carries no tss dependency.
default = ["linux-tpm"]
linux-tpm = ["dep:enclaveapp-linux-tpm"]
# Mock backend. Opt-in at compile time ONLY — release binaries must
# not include it (a runtime flag in a production build would let an
# attacker swap the hardware-backed store for an AES-in-RAM mock).
# Consumers enable this via a `[dev-dependencies]` entry so the mock
# is unified in during `cargo test` but never during `cargo build`.
mock = ["dep:aes-gcm", "dep:rand", "dep:sha2"]

[dependencies]
enclaveapp-core = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
zeroize = { workspace = true }

# Test-only crypto for MockEncryptionStorage — feature-gated so
# release builds do not pull them in via this crate.
aes-gcm = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
enclaveapp-test-support = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
enclaveapp-apple = { workspace = true, features = ["signing", "encryption"] }

[target.'cfg(target_os = "windows")'.dependencies]
enclaveapp-windows = { workspace = true, features = ["signing", "encryption"] }

[target.'cfg(target_os = "linux")'.dependencies]
enclaveapp-keyring = { workspace = true, features = ["signing", "encryption"] }
enclaveapp-bridge = { workspace = true }
enclaveapp-wsl = { workspace = true }
enclaveapp-linux-tpm = { workspace = true, features = ["signing", "encryption"], optional = true }
