[package]
name = "enclaveapp-apple"
description = "macOS Secure Enclave backend for libenclaveapp (CryptoKit)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
signing = []
encryption = []

[dependencies]
enclaveapp-core = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
