[package]
name = "enclaveapp-apple"
description = "macOS Secure Enclave backend for libenclaveapp (CryptoKit)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
signing = []
encryption = []

[dependencies]
enclaveapp-core = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
tracing = "0.1"
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
