[package]
name = "enclaveapp-bridge"
description = "TPM bridge for WSL (JSON-RPC over stdin/stdout)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
enclaveapp-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
