[package]
name = "enclaveapp-core"
description = "Platform-agnostic types, traits, and utilities for hardware-backed key management"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
