[package]
name = "enclaveapp-software"
description = "Software-only key backend for libenclaveapp (Linux fallback)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
signing = []
encryption = []
keyring-storage = ["keyring"]

[dependencies]
enclaveapp-core = { workspace = true }
p256 = { workspace = true }
aes-gcm = { workspace = true }
elliptic-curve = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# keyring is only useful on Linux with glibc (needs libdbus).
# On musl/Alpine, it won't link. The keyring-storage feature gates the code.
[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
keyring = { workspace = true, optional = true }
