[package]
name = "enclaveapp-tpm-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Generic JSON-RPC TPM bridge server for enclave apps"

[lints]
workspace = true

[dependencies]
enclaveapp-core = { workspace = true }
enclaveapp-bridge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
