[package]
name = "enclaveapp-windows-webauthn"
description = "Hardware-enforced Windows Hello consent via the WebAuthN.dll platform authenticator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
enclaveapp-core = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Win32_Networking_WindowsWebServices", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
