[package]
name = "hardware-enclave"
description = "Hardware-backed key management — macOS Secure Enclave, Windows TPM 2.0, Linux TPM/keyring"
keywords   = ["security", "tpm", "secure-enclave", "cryptography", "memory-protection"]
categories = ["cryptography", "os", "hardware-support"]
documentation = "https://docs.rs/hardware-enclave"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
aes-gcm        = { workspace = true }
anyhow         = { workspace = true }
base64         = { workspace = true }
ciborium       = { workspace = true }
dirs           = { workspace = true }
elliptic-curve = { workspace = true }
fs2            = { workspace = true }
fs4            = { workspace = true }
libc           = { workspace = true }
p256           = { workspace = true }
rand           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
shlex          = { workspace = true }
subtle         = { workspace = true }
tempfile       = { workspace = true }
thiserror      = { workspace = true }
toml           = { workspace = true }
tracing        = { workspace = true }
zeroize        = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows      = { workspace = true }
winresource  = { workspace = true }

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
keyring   = { workspace = true }
tss-esapi = { workspace = true }

[features]
# `linux-tpm` (on by default) pulls in the Linux hardware-TPM backend
# and its `libtss2`/tss-esapi link. Consumers that only use the keyring
# backend or the WSL→Windows bridge set `default-features = false` so the
# binary does not require `libtss2` to be installed to start.
default = ["signing", "encryption"]
linux-tpm = []
keyring-storage = []
signing = []
encryption = []
mock = []

[dev-dependencies]
tempfile = { workspace = true }
enclaveapp-core = { workspace = true }
enclaveapp-test-software = { workspace = true, features = ["signing", "encryption"] }
enclaveapp-test-support = { workspace = true }
tracing-subscriber = { workspace = true }
p256 = { workspace = true }

[lints]
workspace = true
